Move Course Sidebar to the same container and float it to prevent whitespace for courses with small description

--- a/src/ClassCentral/SiteBundle/Resources/public/slashpixel/less/app.less
+++ b/src/ClassCentral/SiteBundle/Resources/public/slashpixel/less/app.less
@@ -2783,9 +2783,9 @@ input.filter-search:focus {
 
 .course-data .course-data-row .course-data-icon .icon {
   width: 18px;
+  height: 18px;
   fill: @gray-sand;
   display: block;
-  height: 100%;
   margin: auto;
 }
 
@@ -3173,6 +3173,12 @@ input.filter-search:focus {
 
 .course-bottom-wrap .faq-wrap .faq-answer {
   font-size: 16px;
+}
+
+@media (min-width: @screen-sm-min) {
+  .course-meta-sidebar {
+    float: right;
+  }
 }
 
 
